# simpleIPS

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  colordialog.h  config.json  cpp.hint  icons.qrc  leaks.xml  mainwindow.ui  ui_window.pro
Include/Widget/: CaptureWidget.h  DrawWidget.h  widget.h  widget_include_files.h
Include/assist/: Mat2QImage.h  Res.h  belongsToEnum.h  config.h
Include/opencv_functions/: BaseOperate.h  Object.h  Showeffect.h  Threshold.h
Include/other_functions/: GraphicsScene.h  eventfilterobject.h
Include/video/: framefilter.h  frameoperator.h  videocapwork.h  videowidget.h
QtTest/: blur.cpp  blur.h  test.cpp  test1.cpp  testObject.cpp  testObject.h  testWidget.cpp  testWidget.h
Widget/: DrawWidget.h  LookWidget.h  widget.h  widget_include_files.h
assist/: Enums.h  Res.h  belongsToEnum.h
core/: config.json
core/include/: widget.h
core/include/Widget/: CaptureWidget.h  DrawWidget.h  LookWidget.h
core/include/assist/: Common.h  NativeEventFilter.h  Res.h  belongsToEnum.h  资源协助类.md
core/include/opencv_functions/: BaseOperate.h  Blur.h  Connected.h  Contours.h  Morphology.h  Object.h
core/include/other_functions/: GraphicsScene.h
core/src/: Blur.cpp  CaptureWidget.cpp  Connected.cpp  Contours.cpp  DrawWidget.cpp  GraphicsScene.cpp  Morphology.cpp  Object.cpp  Showeffect.cpp  Threshold.cpp  WidgetBuilder.cpp  eventfilterobject.cpp  widget.cpp  如何添加一个新功能.md
include/: Blur.h  Common.h  Connected.h  Contours.h  Cvtcolor.h  DrawWidget.h  Enums.h  Form.h  GraphicsScene.h  LabelImg.h  Mat2QImage.h  Morphology.h  MyToolBox.h  Object.h  QImage2Mat.h  Res.h  Threshold.h  belongsToEnum.h  widget.h  widget_include_files.h
include/Widget/: CaptureWidget.h  DrawWidget.h  LabelImg.h  ShowImgWidget.h  WidgetBuilder.h
include/assist/: Common.h  Cvtcolor.h  Enums.h  Mat2QImage.h  NativeEventFilter.h  QImage2Mat.h  Res.h  ShowImgWidget.h  belongsToEnum.h  config.h  资源协助类.md
include/opencv_functions/: BaseOperate.h  Blur.h  Connected.h  Contours.h  Morphology.h  Object.h  Showeffect.h  Threshold.h
include/other_functions/: DrawWidget.h  LabelImg.h
opencv_functions/: BaseOperate.h  Blur.h  Object.h  Showeffect.h
other_functions/: GraphicsScene.h  deprecated.h
resource/: 如何添加一个新功能.md
resource/config/: init.json
resource/qss/: dark.css  light.css  meihua.css
source/: BaseOperate.cpp  Blur.cpp  CaptureWidget.cpp  Connected.cpp  Contours.cpp  DrawWidget.cpp  GraphicsScene.cpp  LookWidget.cpp  Morphology.cpp  Object.cpp  Res.cpp  ShowImgWidget.cpp  Showeffect.cpp  Threshold.cpp  WidgetBuilder.cpp  eventfilterobject.cpp  framefilter.cpp  frameoperator.cpp  main.cpp  source.pro  videocapwork.cpp  videowidget.cpp  widget.cpp
src/: BaseOperate.cpp  Blur.cpp  CaptureWidget.cpp  Connected.cpp  Contours.cpp  Cvtcolor.cpp  DrawWidget.cpp  Form.cpp  GraphicsScene.cpp  LabelImg.cpp  LookWidget.cpp  Morphology.cpp  NativeEventFilter.cpp  Object.cpp  Res.cpp  ShowImgWidget.cpp  Showeffect.cpp  Threshold.cpp  WidgetBuilder.cpp  main.cpp  widget.cpp  如何添加一个新功能.md
